--- a/Header.css
+++ b/Header.css
@@ -119,7 +119,7 @@ ul {
     z-index: 10;
     left: 45%;
     font-size: 30px;
-    color: darkolivegreen;
+    color: white;
     opacity: 0.5;
     cursor: pointer;
 }
@@ -129,7 +129,7 @@ ul {
     z-index: 10;
     right: 45%;
     font-size: 30px;
-    color: darkolivegreen;
+    color: white;
     opacity: 0.5;
     cursor: pointer;
 }
